--- a/docs/_includes/test.html
+++ b/docs/_includes/test.html
@@ -28,16 +28,6 @@
     word-break: normal;
   }
 
-  .tg .tg-20xt {
-    background-color: #ffffff;
-    border-color: #ffffff;
-    color: #47965d;
-    /* font-weight: bold; */
-    font-size: 22px;
-    text-align: center;
-    vertical-align: top;
-  }
-
   .tg .tg-xm73 {
     border-color: #ffffff;
     font-size: 20px;
@@ -50,8 +40,8 @@
   <table class="tg">
     <thead>
       <tr>
-        <th class="tg-20xt">Total US Dollar Value</th>
-        <th class="tg-20xt">Total Records Published </th>
+        <th style="background-color: #ffffff;border-color: #ffffff;color: #47965d;font-size: 22px;text-align: center;vertical-align: center;">Total US Dollar Value</th>
+        <th style="background-color: #ffffff;border-color: #ffffff;color: #47965d;font-size: 22px;text-align: center;vertical-align: center;">Total Records Published </th>
       </tr>
     </thead>
     <tbody>
