--- a/docs/_includes/test.html
+++ b/docs/_includes/test.html
@@ -2,7 +2,6 @@
   .tg {
     border-collapse: collapse;
     border-spacing: 0;
-    width: 100%;
   }
 
   .tg td {
@@ -28,26 +27,19 @@
     word-break: normal;
   }
 
-  .tg .tg-xm73 {
-    border-color: #ffffff;
-    font-size: 20px;
-    text-align: center;
-    vertical-align: top;
-  }
-
 </style>
 <center>
   <table class="tg">
     <thead>
       <tr>
-        <th style="background-color: #ffffff;border-color: #ffffff;color: #47965d;font-size: 22px;text-align: center;vertical-align: center;">Total US Dollar Value</th>
+        <th style="background-color: #ffffff;border-color: #ffffff;color: #47965d;font-size: 22px;text-align: center;vertical-align: center;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTotal US Dollar Value&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
         <th style="background-color: #ffffff;border-color: #ffffff;color: #47965d;font-size: 22px;text-align: center;vertical-align: center;">Total Records Published </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td class="tg-xm73">$10.86 Billion</td>
-        <td class="tg-xm73">11.22 Million</td>
+        <td style="border-color: #ffffff;font-size: 20px;text-align: left;vertical-align: top;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp$10.86 Billion</td>
+        <td style="border-color: #ffffff;font-size: 20px;text-align: left;vertical-align: top;">11.22 Million</td>
       </tr>
     </tbody>
   </table>
